--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
             updateDisplay();
         }
 
+        function convertirPresion() {
+            if (currentInput === '') return;
+            let result = parseFloat(currentInput) * 14.504
+            ;
+            currentInput = result.toString();
+            updateDisplay();
+        }
+
         function clearDisplay() {
             currentInput = '';
             operator = '';
