--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </style>
 </head>
 <body>
+    <h1>Calculadora</h1>
     <div class="calculator">
         <div id="display" class="display"></div>
         <div class="buttons">
@@ -77,7 +78,7 @@
             <button class="button operator" onclick="convertirMoneda()">M</button>
         </div>
     </div>
-
+    <h4>Autor:Gabriel Jimenez</h4>
     <script>
         let currentInput = '';
         let operator = '';
