--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <style>
+        body{
+            background-color: #a0c9ff;
+        }
         .calculator {
             width: 200px;
             margin: 0 auto;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: 1px solid #000000;
             border-radius: 5px;
         }
         .display {
@@ -18,7 +21,7 @@
             margin-bottom: 10px;
             text-align: right;
             padding: 5px;
-            border: 1px solid #ccc;
+            border: 1px solid #212121;
             border-radius: 5px;
             font-size: 1.5em;
         }
@@ -31,13 +34,13 @@
             width: 100%;
             height: 50px;
             font-size: 1.2em;
-            border: 1px solid #ccc;
+            border: 1px solid #212121;
             border-radius: 5px;
             background-color: #f9f9f9;
             cursor: pointer;
         }
         .button.operator {
-            background-color: #a0c9ff;
+            background-color: #eebd6e;
         }
         .button.operator:hover {
             background-color: #f39c12;
